--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "async-mutex": "^0.5.0",
     "axios": "^1.7.2",
+    "json-stringify-deterministic": "^1.0.12",
     "lru-cache": "^11.0.0",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2"
